# lab3

./: CMakeLists.txt
include/: ext.h  fs.h  gpt.h  my_utils.h  ntfs.h  resources.h
src/: ext.cpp  fs.cpp  gpt.cpp  main.cpp  my_utils.cpp  ntfs.cpp
